# phntm_bridge_client

./: CMakeLists.txt  Dockerfile  Dockerfile.x64  README.md  compose.yml  docker-compose.override.yml  package.xml  phntm_bridge.yaml  setup.sh
.github/: copilot-instructions.md
launch/: client_agent_launch.py
src/: camera_relay_pub.py  chat_interface_node.py  grounding_dino_node.py
src/chat_widgets/: chat-drone-widget.js  chat-operator-widget.js  chat-spot-widget.js  chat-widgets.css  server.js
ui_extras/: package-lock.json  package.json  server.crt  server.js  server.key
ui_extras/chat-widgets/: chat-drone-widget.js  chat-operator-widget.js  chat-spot-widget.js  chat-widgets.css
